# blog

./: README.md
ast-edits/: .gitignore  README.md  pyproject.toml
ast-edits/localised_edit_experiments/: data_models.py  evaluation.py  plotting.py  run_experiment.py  runner.py  task_fixtures.py  tasks.py
ast-edits/localised_edit_experiments/edit_methods/: __init__.py  ast_edit.py  base.py  hashline.py  hashline_search_replace.py  hashline_unified_diff.py  search_replace.py  unified_diff.py  whole_file.py
